# syncthing-paranoid

./: Justfile  README.md  pyproject.toml  syncthing-paranoid  syncthing_paranoid.py
tests/: test_syncthing_paranoid.py
